# forkos

./: .gitignore  README.md
config/keyd/: default.conf
config/niri/: config.kdl
crates/: Cargo.toml
crates/narrative/: Cargo.toml
crates/narrative/src/: app.rs  entry.rs  main.rs  models.rs  mpris.rs  pty.rs  storage.rs  store.rs  theme.rs
crates/narrative/src/view/: bar.rs  blocks.rs  composer.rs  context_bar.rs  entry_view.rs  header.rs  mod.rs  palette_inline.rs  terminal.rs
crates/palette/: Cargo.toml
crates/palette/src/: app.rs  calculator.rs  command.rs  grep.rs  main.rs  mode.rs  narrative.rs  search.rs  shell.rs  theme.rs
crates/palette/src/sources/: contacts.rs  desktop.rs  icons.rs  mod.rs  niri_windows.rs  path_cmds.rs  recent.rs  tags.rs
crates/palette/src/view/: footer.rs  header.rs  mod.rs  results.rs
crates/shared/: Cargo.toml
crates/shared/src/: command.rs  lib.rs  mode.rs  search.rs  shell.rs  theme.rs
crates/shared/src/sources/: desktop.rs  mod.rs  niri_windows.rs  path_cmds.rs  recent.rs
docs/: architecture.md  roadmap.md  ui-design.md
