[workspace]
resolver = "2"
members = [
    "palette",
    "narrative",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ton Nom <ton@email.com>"]
license = "GPL-3.0"
repository = "https://github.com/tonuser/forkos"

[workspace.dependencies]
# dépendances communes qu'on partagera entre crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
