[package]
name = "narrative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
forkos-shared = { path = "../shared" }
