[package]
name = "palette"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.13", features = ["tokio", "image", "svg"] }
nucleo = "0.5"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }